--- a/wagtail/project_template/home/templates/home/home_page.html
+++ b/wagtail/project_template/home/templates/home/home_page.html
@@ -3,7 +3,7 @@
 {% templatetag openblock %} block body_class {% templatetag closeblock %}template-{% templatetag openvariable %} self.get_verbose_name|slugify {% templatetag closevariable %}{% templatetag openblock %} endblock {% templatetag closeblock %}
 
 {% templatetag openblock %} block content {% templatetag closeblock %}
-    <h1>Welcome to your new Wagtail site!</h1>
+    <h1>Welcome to your new BalkanCMS site!</h1>
 
     <p>You can access the admin interface <a href="{% templatetag openblock %} url 'wagtailadmin_home' {% templatetag closeblock %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).
 
